--- a/components/styles/index.scss
+++ b/components/styles/index.scss
@@ -5,3 +5,21 @@
     margin: 1rem;
   }
 }
+
+.tabs {
+  label {
+    &.active {
+      color: #41403e;
+      color: var(--primary);
+      border-bottom-color: #41403e;
+      border-bottom-color: var(--secondary);
+      border-bottom-style: solid;
+      border-bottom-width: 3px;
+    }
+  }
+  .content {
+    &.active {
+      display: block;
+    }
+  }
+}
