docs: add Space's storybook

--- a/components/styles/index.scss
+++ b/components/styles/index.scss
@@ -1,8 +1,18 @@
 @import '~papercss/src/styles.scss';
 
 .space {
+  margin-left: -1rem;
+  margin-right: -1rem;
   > * {
     margin: 1rem;
+  }
+
+  &--large {
+    margin-left: -1.714rem;
+    margin-right: -1.714rem;
+    > * {
+      margin: 1.714rem;
+    }
   }
 }
 
